debugged wrap issue in header

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -19,6 +19,10 @@
     flex-direction: column;
 }
 
+.fxw-w {
+    flex-wrap: wrap;
+}
+
 .g-2r {
     gap: 2rem;
 }
